# superagentX-examples

./: .gitignore  README.md  pyproject.toml
superagentx_examples/: README.md  ecom_iopipe.py  ecom_wspipe.py  ecom_wspipe_cli.py
superagentx_examples/best_buy_deals/: README.md  pyproject.toml
superagentx_examples/best_buy_deals/best_buy_deals/: config.py  iopipe.py  pipe.py  restpipe.py  wspipe.py
superagentx_examples/coffeecompass/: README.md  pyproject.toml
superagentx_examples/coffeecompass/coffeecompass/: config.py  iopipe.py  pipe.py  restpipe.py  wspipe.py
superagentx_examples/coffeecompass/coffeecompass/handler/: coffeecompass_handler.py
superagentx_examples/doctor appointment/: README.md  pyproject.toml
superagentx_examples/doctor appointment/doctor_appointment/: config.py  iopipe.py  pipe.py  restpipe.py  wspipe.py
superagentx_examples/doctor appointment/doctor_appointment/data/: hospital_data.sqlite3
superagentx_examples/ecom/: README.md  ecom_fastapi.py  ecom_iopipe.py  ecom_wspipe.py  ecom_wspipe_cli.py  pipe.py  pyproject.toml
superagentx_examples/ecom/ecom/: config.py  iopipe.py  pipe.py  restpipe.py  wspipe.py
superagentx_examples/mcp_reddit_agent/: main.py  requirements.txt
superagentx_examples/multi-agents-browser/: data_handler.py  main.py  requirements.txt
superagentx_examples/trip_planner/: README.md  pipe.py  pyproject.toml  trip_planner_iopipe.py
superagentx_examples/trip_planner/trip_planner/: config.py  iopipe.py  pipe.py  restpipe.py  trip_planner_fastapi.py  trip_planner_wspipe.py  wspipe.py  wspipe_cli.py
superagentx_examples/voice_to_text/: pyproject.toml
superagentx_examples/voice_to_text/aws_voice/: awsvoicepipe.py  config.py  iopipe.py  pipe.py  restpipe.py  test_aws_iopipe_create_policy.py  wspipe.py  wspipe_cli.py
superagentx_examples/voice_to_text/whisper_voice/: iopipe.py  openaivoicepipe.py  pipe.py  restpipe.py  test_openai_iopipe_create_policy.py  whisper_pipe.py  wspipe.py
superagentx_examples/weather/: README.md  pipe.py  weather_fastapi.py  weather_iopipe.py  weather_wspipe.py
