[tool.poetry]
name = "superagentx-examples"
version = "0.1.3"
description = ""
authors = [
    "SuperAgentX AI <support@superagentx.ai>",
]
maintainers = [
    "SuperAgentX AI <support@superagentx.ai>",
]
readme = "README.md"
homepage = "https://www.superagentx.ai/"
repository = "https://github.com/superagentxai/superagentx-examples"
documentation = "https://docs.superagentx.ai/"
keywords = ["superagentX", "AGI", "Agentic AI", "ASI", "superagentx", "superagentx-examples", "agent", "LLM"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
rich = "^13.9.2"
websockets = "^13.1"
superagentx = "^0.1.12"
superagentx-handlers = "^0.1.5"
fastapi = {extras = ["standard"], version = "^0.115.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
